src/test/ui/huge-enum.stderr
error: the type `std::option::Option<[u32; 35184372088831]>` is too big for the current architecture
  --> $DIR/huge-enum.rs:12:9
   |
LL |     let big: BIG = None;
   |         ^^^

error: aborting due to previous error

